Fix menu on small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,10 +73,12 @@
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
         text-align: right;
+        @include shadow-box;
+
+        a {
+            padding: 0;
+        }
 
         .menu-icon {
             display: block;
@@ -92,7 +94,7 @@
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: white;
                 }
             }
         }
@@ -107,14 +109,18 @@
             padding-bottom: 5px;
         }
 
+        a:hover {
+            background-color: rgba(0, 0, 0, 0);
+        }
+
         .page-link {
+            color: white;
             display: block;
             padding: 5px 10px;
 
             &:not(:last-child) {
                 margin-right: 0;
             }
-            margin-left: 20px;
         }
     }
 }
